results/SVCOMP/2-shot/log-BinaryTree-2024_03_18_23_45_05.txt
public class BinaryTree {
  /** Internal class representing a Node in the tree. */
  private class Node {
    int value;
    Node left;
    Node right;

    Node(int v, Node l, Node r) {
      value = v;
      left = l;
      right = r;
    }
  }

  private Node root = null;

  /** 
   * Inserts a value into the tree.
   * @param v the value to be inserted
   */
  //@ requires v != null;
  //@ ensures (\exists Node n; n.value == v);
  public void insert(int v) {

    if (root == null) {
      root = new Node(v, null, null);
      return;
    }

    Node curr = root;
    while (true) {
      if (curr.value < v) {
        if (curr.right != null) {
          curr = curr.right;
        } else {
          curr.right = new Node(v, null, null);
          break;
        }
      } else if (curr.value > v) {
        if (curr.left != null) {
          curr = curr.left;
        } else {
          curr.left = new Node(v, null, null);
          break;
        }
      } else {
        break;
      }
    }
  }

  /** 
   * Searches for a value in the tree.
   * @param v the value to search for
   * @return true if the value is found, false otherwise
   */
  //@ requires v != null;
  //@ ensures \result == (\exists Node n; n.value == v);
  public boolean search(int v) {
    Node curr = root;
    while (curr != null) { // N branches
      if (curr.value == v) { // N-1 branches
        return true;
      } else if (curr.value < v) { // N-1 branches
        curr = curr.right;
      } else {
        curr = curr.left;
      }
    }
    return false;
  }
}
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:21: error: bad operand types for binary operator '!='
  //@ requires v != null;
                 ^
  first type:  int
  second type: <null>
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:22: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures (\exists Node n; n.value == v);
                                ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:57: error: bad operand types for binary operator '!='
  //@ requires v != null;
                 ^
  first type:  int
  second type: <null>
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:58: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == (\exists Node n; n.value == v);
                                           ^
4 errors

